@@ -51,6 +51,7 @@ namespace libtorrent
 			, udp::endpoint const&, char const* buf, int size)> callback_t;
 
 		udp_socket(io_service& ios, callback_t const& c, connection_queue& cc);
+		~udp_socket();
 
 		bool is_open() const { return m_ipv4_sock.is_open() || m_ipv6_sock.is_open(); }
 		io_service& get_io_service() { return m_ipv4_sock.get_io_service(); }
@@ -63,16 +64,6 @@ namespace libtorrent
 
 		void set_proxy_settings(proxy_settings const& ps);
 		proxy_settings const& get_proxy_settings() { return m_proxy_settings; }
-
-#ifdef TORRENT_DEBUG
-		~udp_socket()
-		{
-			TORRENT_ASSERT(m_magic == 0x1337);
-			TORRENT_ASSERT(m_outstanding == 0);
-			TORRENT_ASSERT(!m_callback);
-			m_magic = 0;
-		}
-#endif
 
 	private:
 
@@ -113,6 +104,7 @@ namespace libtorrent
 		tcp::resolver m_resolver;
 		char m_tmp_buf[100];
 		bool m_tunnel_packets;
+		bool m_abort;
 		udp::endpoint m_proxy_addr;
 #ifdef TORRENT_DEBUG
 		int m_magic;
